[package]
name = "ShadowFrontierProject"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
rand_core = "0.9"
bevy_prng = { version = "0.11", features = ["wyrand"] }
bevy_rand = { version = "0.11", features = ["wyrand"] }
bevy_rapier2d = { version = "*", features = [ "debug-render-2d" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
